# Automation-Test-Script-Blueprint

./: .gitignore  README.md  pyproject.toml  requirements.txt
keywords/: import.resource
keywords/web/: common.robot
resources/setting/web/: setting.yaml
resources/testdata/web/: test_data.yaml
