[tool.poetry]
name = "sdlc-test-automation"
version = "0.1.0"
description = "Test automation for sdlc lab feature"

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^6.1.1"
robotframework-seleniumlibrary = "^6.1.0"
robotframework-requests = "^0.9.5"
robotframework-faker = "^5.0.0"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"